# OpenGl-Beauty-Effects

./: README.md  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/example/wyopenglproject/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  CascadeDetectorAdapter.h  FaceTrack.cpp  FaceTrack.h  JniCallback.cpp  JniCallback.h  androidlog.h  errorType.h  macro.h  native-lib.cpp
app/src/main/cpp/faceAlignment/: CMakeLists.txt
app/src/main/java/com/example/wyopenglproject/: MainActivity.java  MyRecordButton.java  SpeedMode.java  WonderfulGLSurfaceView.java  WonderfulRender.java
app/src/main/java/com/example/wyopenglproject/face/: Face.java  FaceTrack.java
app/src/main/java/com/example/wyopenglproject/filter/: BaseFilter.java  BaseFrameFilter.java  BeautyFilter.java  BigEyeFilter.java  CameraFilter.java  ScreenFilter.java  StickFilter.java
app/src/main/java/com/example/wyopenglproject/record/: WonderfulEgl.java  WonderfulMediaRecorder.java
app/src/main/java/com/example/wyopenglproject/utils/: BufferHelper.java  CameraHelper.java  FileUtil.java  OpenGLCodeReader.java  ShaderHelper.java  TextureHelper.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/raw/: base_fragment_shader.glsl  base_vertex_shader.glsl  beauty_frame_shader.glsl  big_eye_frame_shader.glsl  big_eye_test.glsl  camera_fragment_shader.glsl  camera_vertex_shader.glsl
app/src/main/res/values/: strings.xml
app/src/test/java/com/example/wyopenglproject/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
